# WEB_hw10

./: README.md  connection.py  main.py  models.py  pyproject.toml
redis_ex/: redis_ex.py
